# stove-lambda

./: README.md  lambda_function.py  main.py  pyproject.toml
